# rechron

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  TODO.md  rechron.toml  rechron_default_xex.toml  rechron_gamelogic.toml  rechron_manifest.toml
scripts/: build_shader_cache.ps1
src/: main.cpp  rechron_app.h  reeot_app.h
src/goliath_engine/: rex_macros.h
src/goliath_engine/common/: misc.cpp
src/goliath_engine/gpu/renderer/: d3d_hooks.cpp  d3d_resource_hooks.cpp  guest_device.h  guest_heap.h  guest_resources.h  pipeline.cpp  render_internal.h  render_state.cpp  render_state.h  video.cpp
src/goliath_engine/kernel/: guest_memory.h
